--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:gravity="center"
+    android:padding="50dp"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Bienvenido al práctico 1"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="100dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/BtnPromedio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:layout_marginBottom="16dp"
+        android:text="Promedio de un estudiante"
+
+        android:padding="25dp"/>
+
+
+    <Button
+        android:id="@+id/BtnSalario"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Descuentos de ley"
+        android:textSize="25sp"
+        android:padding="25dp"
+        android:layout_marginBottom="16dp"/>
+
+
+    <Button
+        android:id="@+id/BtnCalculadora"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:padding="25dp"
+        android:text="Calculadora"/>
+
+</LinearLayout>
