--- a/app/src/main/res/layout/activity_promedio.xml
+++ b/app/src/main/res/layout/activity_promedio.xml
@@ -5,11 +5,32 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+
+
+    <TextView
+        android:id="@+id/LlbTitulo"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="40dp"/>
+
+
+    <TextView
+        android:id="@+id/Llbnombre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:text="@string/nombre"/>
+
+
+
     <EditText
         android:id="@+id/etNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nombre del estudiante"
         android:layout_marginBottom="16dp"/>
 
     <EditText
@@ -52,6 +73,18 @@
         android:inputType="numberDecimal"
         android:layout_marginBottom="16dp"/>
 
+    <TextView
+        android:id="@+id/tvResultado"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:layout_marginBottom="16dp"
+        android:text="Promedio de:"/>
+
+
+
+
     <Button
         android:id="@+id/btnCalcularPromedio"
         android:layout_width="match_parent"
@@ -59,12 +92,6 @@
         android:text="Calcular Promedio"
         android:layout_marginBottom="16dp"/>
 
-    <TextView
-        android:id="@+id/tvResultado"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:gravity="center"
-        android:text="Resultado aparecerá aquí"/>
+
 
 </LinearLayout>
