--- a/app/src/main/res/layout/activity_calculadora.xml
+++ b/app/src/main/res/layout/activity_calculadora.xml
@@ -6,47 +6,57 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/LlbTitulo"
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="activity_promedio.xml" />
+        android:text="@string/app_name"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="40dp"/>
+
+
 
     <EditText
-        android:id="@+id/etOperando1"
+        android:id="@+id/TxtOperando1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Operando 1"
+        android:hint="Dato 1"
         android:inputType="numberDecimal"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="10dp"/>
 
     <EditText
-        android:id="@+id/etOperando2"
+        android:id="@+id/TxtOperando2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Operando 2"
+        android:hint="Dato 2"
         android:inputType="numberDecimal"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="10dp"/>
 
     <EditText
-        android:id="@+id/etOperacion"
+        android:id="@+id/TxtOperacion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Operación (+, -, *, /, ^, √)"
-        android:layout_marginBottom="16dp"/>
-
-    <Button
-        android:id="@+id/btnCalcularOperacion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Calcular"
+        android:hint="Escriba el simbolo a operar (+, -, *, /, ^, √)"
         android:layout_marginBottom="16dp"/>
 
     <TextView
-        android:id="@+id/tvResultadoCalculadora"
+        android:id="@+id/TxtResultadoCalculadora"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
         android:gravity="center"
-        android:text="Resultado aparecerá aquí"
-        android:textSize="18sp" />
+        android:layout_marginBottom="16dp"
+        android:text=""/>
+
+    <Button
+        android:id="@+id/BtnCalcularOperacion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Calcular"
+
+        android:layout_marginBottom="16dp"/>
+
+
 
 </LinearLayout>
